photoprism/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  selector:
    app: photoprism
  ports:
    - protocol: TCP
      targetPort: 2342
      port: 80
      name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: photoprism
spec:
  podSelector:
    matchLabels:
      app: photoprism
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photoprism
spec:
  hostnames:
  - photoprism.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: photoprism
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
